Use on-disk hash table for storing the DefPathHash->DefIndex in crate metadata.
The on-disk hash table allows for radnom access to its data without an expensive
upfront decoding step and we can thus avoid creating another in-memory cache
for it.

--- a/compiler/rustc_metadata/Cargo.toml
+++ b/compiler/rustc_metadata/Cargo.toml
@@ -13,6 +13,7 @@ snap = "1"
 tracing = "0.1"
 memmap2 = "0.2.1"
 smallvec = { version = "1.6.1", features = ["union", "may_dangle"] }
+odht = { git = "https://github.com/michaelwoerister/odht", branch = "main", features = ["nightly"] }
 rustc_middle = { path = "../rustc_middle" }
 rustc_attr = { path = "../rustc_attr" }
 rustc_data_structures = { path = "../rustc_data_structures" }
